feat(ubiquity): initial commit
Signed-off-by: Rafael Belchior <rafael.belchior@tecnico.ulisboa.pt>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -132,6 +132,9 @@
     },
     {
       "path": "./extensions/cactus-plugin-htlc-coordinator-besu/tsconfig.json"
+    },
+    {
+      "path": "./packages/cactus-plugin-ledger-connector-ubiquity/tsconfig.json"
     }
   ],
   "compilerOptions": {
