--- a/tsconfig.json
+++ b/tsconfig.json
@@ -161,6 +161,9 @@
       "path": "./examples/cactus-example-cbdc-bridging-frontend/tsconfig.json"
     },
     {
+      "path": "./examples/cactus-example-cbdc-bridging-backend/tsconfig.json"
+    },
+    {
       "path": "./extensions/cactus-plugin-object-store-ipfs/tsconfig.json"
     },
     {
