--- a/packages/cactus-plugin-bungee/package.json
+++ b/packages/cactus-plugin-bungee/package.json
@@ -64,8 +64,13 @@
     "@hyperledger/cactus-plugin-object-store-ipfs": "2.0.0-alpha.2",
     "@hyperledger/cactus-test-tooling": "2.0.0-alpha.2",
     "axios": "1.6.0",
+    "body-parser": "1.20.2",
+    "fs-extra": "10.1.0",
+    "key-encoder": "2.0.3",
     "typescript-optional": "2.0.1",
-    "uuid": "9.0.1"
+    "uuid": "9.0.1",
+    "web3": "1.6.1",
+    "web3-core": "1.6.1"
   },
   "devDependencies": {
     "@types/body-parser": "1.19.4",
@@ -75,7 +80,8 @@
     "@types/tape": "4.13.4",
     "@types/uuid": "9.0.6",
     "express": "4.18.2",
-    "fabric-network": "2.2.20"
+    "fabric-network": "2.2.20",
+    "socket.io": "4.5.4"
   },
   "engines": {
     "node": ">=18",
