--- a/packages/cactus-plugin-satp-hermes/package.json
+++ b/packages/cactus-plugin-satp-hermes/package.json
@@ -49,10 +49,12 @@
     "watch": "npm-watch"
   },
   "dependencies": {
+    "@hyperledger/cactus-api-client": "2.0.0-alpha.2",
     "@hyperledger/cactus-cmd-api-server": "2.0.0-alpha.2",
     "@hyperledger/cactus-common": "2.0.0-alpha.2",
     "@hyperledger/cactus-core": "2.0.0-alpha.2",
     "@hyperledger/cactus-core-api": "2.0.0-alpha.2",
+    "@hyperledger/cactus-plugin-consortium-manual": "2.0.0-alpha.2",
     "@hyperledger/cactus-plugin-keychain-memory": "2.0.0-alpha.2",
     "@hyperledger/cactus-plugin-ledger-connector-besu": "2.0.0-alpha.2",
     "@hyperledger/cactus-plugin-ledger-connector-fabric": "2.0.0-alpha.2",
@@ -61,6 +63,7 @@
     "axios": "1.6.0",
     "crypto-js": "4.2.0",
     "fs-extra": "11.1.1",
+    "jose": "4.15.5",
     "knex": "2.4.0",
     "secp256k1": "4.0.3",
     "socket.io": "4.5.4",
@@ -80,6 +83,7 @@
     "body-parser": "1.20.2",
     "express": "4.19.2",
     "fabric-network": "2.2.20",
+    "jose": "5.2.4",
     "kubo-rpc-client": "3.0.1",
     "typescript": "5.3.3"
   },
